--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ exclude = [
   "farms/router-saber",
   "farms/router-orca",
   "farms/vaults",
+  "universal-idl-program/cli",
+  "universal-idl-program/program"
 ]
 
 [profile.dev]
