--- a/token/program-2022-test/Cargo.toml
+++ b/token/program-2022-test/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/solana-labs/solana-program-library"
 version = "0.0.1"
 
 [features]
-test-sbf = []
+test-sbf = ["zk-ops"]
 default = ["zk-ops"]
 zk-ops = []
 proof-program = []
