--- a/.github/workflows/pull-request-name-service.yml
+++ b/.github/workflows/pull-request-name-service.yml
@@ -57,10 +57,18 @@ jobs:
       - name: Build and test
         run: ./ci/cargo-test-sbf.sh name-service
 
+      - name: Upload programs
+        uses: actions/upload-artifact@v2
+        with:
+          name: name-service-programs
+          path: "target/deploy/*.so"
+          if-no-files-found: error
+
   js-test:
     runs-on: ubuntu-latest
     env:
       NODE_VERSION: 14.x
+    needs: cargo-test-sbf
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ env.NODE_VERSION }}
@@ -73,4 +81,9 @@ jobs:
           key: node-${{ hashFiles('name-service/js/yarn.lock') }}
           restore-keys: |
             node-
+      - name: Download programs
+        uses: actions/download-artifact@v2
+        with:
+          name: name-service-programs
+          path: target/deploy
       - run: ./ci/js-test-name-service.sh
