spl-token-client: Depend on spl-token-2022/proof-program
This fixes a compilation error if spl-token-client is compiled with the
proof-program feature, as it previously did not compile spl-token-2022
with the corresponding feature.

--- a/token/client/Cargo.toml
+++ b/token/client/Cargo.toml
@@ -24,4 +24,4 @@ thiserror = "1.0"
 [features]
 default = ["display"]
 display = ["dep:solana-cli-output"]
-proof-program = []
+proof-program = ["spl-token-2022/proof-program"]
