--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,10 +3,10 @@ solana_version = "1.14.12"
 
 [workspace]
 members = [
-  "governance/program",
-  "governance/chat/program",
-  "memo/program",
-  "stake-pool/program",
+  # "governance/program",
+  # "governance/chat/program",
+  # "memo/program",
+  # "stake-pool/program",
   "token/program",
   "token/program-2022",
 ]
