--- a/stake-pool/cli/Cargo.toml
+++ b/stake-pool/cli/Cargo.toml
@@ -9,8 +9,11 @@ repository = "https://github.com/solana-labs/solana-program-library"
 version = "0.7.0"
 
 [dependencies]
+bs58 = "0.4.0"
+bincode = "1.3.1"
 borsh = "0.9"
 clap = "2.33.3"
+futures = "0.3.21"
 serde = "1.0.130"
 serde_derive = "1.0.130"
 serde_json = "1.0.68"
@@ -26,8 +29,8 @@ solana-sdk = "=1.11.6"
 spl-associated-token-account = { version = "=1.1.1", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
 spl-stake-pool = { version = "=0.7.0", path="../program", features = [ "no-entrypoint" ] }
 spl-token = { version = "=3.5.0", path="../../token/program", features = [ "no-entrypoint" ]  }
-bs58 = "0.4.0"
-bincode = "1.3.1"
+thiserror = "1.0.37"
+tokio = "1.14.1"
 
 [[bin]]
 name = "spl-stake-pool"
