--- a/token/permissioned-transfer/Cargo.toml
+++ b/token/permissioned-transfer/Cargo.toml
@@ -24,7 +24,8 @@ thiserror = "1.0"
 [dev-dependencies]
 solana-program-test = "1.14.12"
 solana-sdk = "1.14.12"
-spl-token = { version = "3.5",  path = "../program", features = ["no-entrypoint"] }
+spl-token-2022 = { version = "0.6",  path = "../program-2022", features = ["no-entrypoint"] }
+spl-token-client = { version = "0.4",  path = "../client" }
 
 [lib]
 crate-type = ["cdylib", "lib"]
