--- a/token/client/Cargo.toml
+++ b/token/client/Cargo.toml
@@ -17,6 +17,7 @@ solana-sdk = "=1.14.12"
 # testing token
 spl-associated-token-account = { version = "1.1", path = "../../associated-token-account/program", features = ["no-entrypoint"] }
 spl-memo = { version = "3.0.1", path = "../../memo/program", features = ["no-entrypoint"] }
+spl-permissioned-transfer = { version = "0.1", path="../permissioned-transfer", features = [ "no-entrypoint", "offchain-client" ] }
 spl-token = { version = "3.5", path="../program", features = [ "no-entrypoint" ] }
 spl-token-2022 = { version = "0.6", path="../program-2022" }
 thiserror = "1.0"
