--- a/token/permissioned-transfer/Cargo.toml
+++ b/token/permissioned-transfer/Cargo.toml
@@ -11,6 +11,7 @@ exclude = ["js/**"]
 [features]
 no-entrypoint = []
 test-sbf = []
+offchain-client = ["dep:solana-sdk"]
 
 [dependencies]
 arrayref = "0.3.6"
@@ -18,6 +19,7 @@ bytemuck = { version = "1.13.0", features = ["derive"] }
 num-derive = "0.3"
 num-traits = "0.2"
 num_enum = "0.5.9"
+solana-sdk = { version = "1.14.12", optional = true }
 solana-program = "1.14.12"
 thiserror = "1.0"
 
