--- a/libraries/tlv-account-resolution/Cargo.toml
+++ b/libraries/tlv-account-resolution/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "spl-account-resolution"
+name = "spl-tlv-account-resolution"
 version = "0.1.0"
-description = "Solana Program Library Account Resolution Interface"
+description = "Solana Program Library TLV Account Resolution Interface"
 authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
 repository = "https://github.com/solana-labs/solana-program-library"
 license = "Apache-2.0"
