move `types` condition to the front

--- a/token-swap/js/package.json
+++ b/token-swap/js/package.json
@@ -20,9 +20,9 @@
   "module": "dist/esm/index.js",
   "sideEffects": false,
   "exports": {
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/types/index.d.ts"
+      "require": "./dist/cjs/index.js"
   },
   "files": [
     "dist",
