--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -64,6 +64,9 @@ jobs:
       - name: Build and test ATA
         run: ./ci/cargo-test-sbf.sh associated-token-account
 
+      - name: Build and test transfer hook example
+        run: ./ci/cargo-test-sbf.sh token/transfer-hook-example
+
       - name: Build and test token-2022 with "serde" activated
         run: |
           cargo +"${{ env.RUST_STABLE }}" test \
