--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,8 @@ members = [
   "token/program",
   "token/program-2022",
   "token/program-2022-test",
+  "token/transfer-hook-example",
+  "token/transfer-hook-interface",
   "token/client",
   "utils/cgen",
   "utils/test-client",
