--- a/token/client/Cargo.toml
+++ b/token/client/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.5.0"
 
 [dependencies]
 async-trait = "0.1"
-futures = "0.3"
+futures-util = "0.3"
 solana-cli-output = { version = "=1.14.12", optional = true }
 solana-client = "=1.14.12"
 solana-program-test = "=1.14.12"
