--- a/token/program-2022-test/Cargo.toml
+++ b/token/program-2022-test/Cargo.toml
@@ -18,6 +18,7 @@ walkdir = "2"
 
 [dev-dependencies]
 async-trait = "0.1"
+futures-util = "0.3"
 solana-program = "=1.14.12"
 solana-program-test = "=1.14.12"
 solana-sdk = "=1.14.12"
