--- a/token/js/.eslintrc
+++ b/token/js/.eslintrc
@@ -26,7 +26,8 @@
                 "test/**/*"
             ],
             "rules": {
-                "require-extensions/require-extensions": "off"
+                "require-extensions/require-extensions": "off",
+                "require-extensions/require-index": "off"
             }
         }
     ]
