--- a/token-swap/js/package.json
+++ b/token-swap/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solana/spl-token-swap",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "SPL Token Swap JavaScript API",
   "license": "MIT",
   "author": "Solana Labs Maintainers <maintainers@solanalabs.com>",
@@ -20,9 +20,9 @@
   "module": "dist/esm/index.js",
   "sideEffects": false,
   "exports": {
-      "types": "./dist/types/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
+    "types": "./dist/types/index.d.ts",
+    "import": "./dist/esm/index.js",
+    "require": "./dist/cjs/index.js"
   },
   "files": [
     "dist",
@@ -42,13 +42,14 @@
   },
   "keywords": [],
   "dependencies": {
-    "bn.js": "^5.1.3",
-    "@solana/web3.js": "^1.42.0",
-    "@solana/buffer-layout": "^4.0.0"
+    "@solana/buffer-layout": "^4.0.0",
+    "@solana/web3.js": "^1.42.0"
   },
   "devDependencies": {
-    "@solana/spl-token": "0.1.8",
+    "@solana/spl-token": "0.3.7",
     "@types/bn.js": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.31.0",
     "eslint-plugin-import": "^2.22.0",
     "prettier": "^2.1.2",
