--- a/token/program-2022-test/Cargo.toml
+++ b/token/program-2022-test/Cargo.toml
@@ -26,3 +26,5 @@ spl-memo = { version = "3.0.1", path = "../../memo/program", features = ["no-ent
 spl-token-2022 = { version = "0.6", path="../program-2022", features = ["no-entrypoint"] }
 spl-instruction-padding = { version = "0.1.0", path="../../instruction-padding/program", features = ["no-entrypoint"] }
 spl-token-client = { version = "0.5", path = "../client" }
+spl-transfer-hook-example = { version = "0.1", path="../transfer-hook-example", features = ["no-entrypoint"] }
+spl-transfer-hook-interface = { version = "0.1", path="../transfer-hook-interface" }
