--- a/stake-pool/single-pool/Cargo.toml
+++ b/stake-pool/single-pool/Cargo.toml
@@ -23,5 +23,14 @@ spl-token = { version = "3.5", path = "../../token/program", features = [ "no-en
 spl-associated-token-account = { version = "1.1", path = "../../associated-token-account/program", features = [ "no-entrypoint" ] }
 thiserror = "1.0"
 
+[dev-dependencies]
+solana-program-test = "1.14.12"
+solana-sdk = "1.14.12"
+solana-vote-program = "1.14.12"
+test-case = "3.1"
+bincode = "1.3.1"
+rand = "0.8.5"
+approx = "0.5.1"
+
 [lib]
 crate-type = ["cdylib", "lib"]
