--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -61,12 +61,6 @@ jobs:
       - name: Build and test token
         run: ./ci/cargo-test-sbf.sh token
 
-      - name: Build and test ATA
-        run: ./ci/cargo-test-sbf.sh associated-token-account
-
-      - name: Build and test transfer hook example
-        run: ./ci/cargo-test-sbf.sh token/transfer-hook-example
-
       - name: Build and test token-2022 with "serde" activated
         run: |
           cargo +"${{ env.RUST_STABLE }}" test \
@@ -79,6 +73,103 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: token-programs
+          path: "target/deploy/*.so"
+          if-no-files-found: error
+
+  cargo-test-sbf-transfer-hook:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set env vars
+        run: |
+          source ci/rust-version.sh
+          echo "RUST_STABLE=$rust_stable" >> $GITHUB_ENV
+          source ci/solana-version.sh
+          echo "SOLANA_VERSION=$solana_version" >> $GITHUB_ENV
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ env.RUST_STABLE }}
+          override: true
+          profile: minimal
+
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: cargo-build-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUST_STABLE}}
+
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/rustfilt
+          key: cargo-sbf-bins-${{ runner.os }}
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/solana
+          key: solana-${{ env.SOLANA_VERSION }}
+
+      - name: Install dependencies
+        run: |
+          ./ci/install-build-deps.sh
+          ./ci/install-program-deps.sh
+          echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
+
+      - name: Build and test transfer hook example
+        run: ./ci/cargo-test-sbf.sh token/transfer-hook-example
+
+  cargo-test-sbf-associated-token-account:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set env vars
+        run: |
+          source ci/rust-version.sh
+          echo "RUST_STABLE=$rust_stable" >> $GITHUB_ENV
+          source ci/solana-version.sh
+          echo "SOLANA_VERSION=$solana_version" >> $GITHUB_ENV
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ env.RUST_STABLE }}
+          override: true
+          profile: minimal
+
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: cargo-build-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUST_STABLE}}
+
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/rustfilt
+          key: cargo-sbf-bins-${{ runner.os }}
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/solana
+          key: solana-${{ env.SOLANA_VERSION }}
+
+      - name: Install dependencies
+        run: |
+          ./ci/install-build-deps.sh
+          ./ci/install-program-deps.sh
+          echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
+
+      - name: Build and test ATA
+        run: ./ci/cargo-test-sbf.sh associated-token-account
+
+      - name: Upload program
+        uses: actions/upload-artifact@v2
+        with:
+          name: associated-token-account-program
           path: "target/deploy/*.so"
           if-no-files-found: error
 
@@ -125,7 +216,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NODE_VERSION: 16.x
-    needs: cargo-test-sbf
+    needs: [cargo-test-sbf, cargo-test-sbf-associated-token-account]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ env.NODE_VERSION }}
@@ -142,6 +233,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: token-programs
+          path: target/deploy
+      - name: Download associated-token-account program
+        uses: actions/download-artifact@v2
+        with:
+          name: associated-token-account-program
           path: target/deploy
       - run: ./ci/js-test-token.sh
 
