--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,3 +54,8 @@ members = [
   "utils/test-client",
   "token-lending/flash_loan_receiver",
 ]
+
+[patch.crates-io]
+# Rust 1.69+ broke ntapi v0.3.x, which doesn't contain proper fix:
+#   https://github.com/MSxDOS/ntapi/pull/12
+ntapi = { git = "https://github.com/solana-labs/ntapi", rev = "97ede981a1777883ff86d142b75024b023f04fad" }
