--- a/libraries/program-error/derive/Cargo.toml
+++ b/libraries/program-error/derive/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "spl-program-error-derive"
 version = "0.1.0"
+description = "Proc-Macro Library for Solana Program error attributes and derive macro"
+authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
+repository = "https://github.com/solana-labs/solana-program-library"
+license = "Apache-2.0"
 edition = "2021"
 
 [lib]
