--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,9 @@ members = [
   "token-lending/flash_loan_receiver",
 ]
 
+exclude = [
+]
+
 [patch.crates-io]
 # Rust 1.69+ broke ntapi v0.3.x, which doesn't contain proper fix:
 #   https://github.com/MSxDOS/ntapi/pull/12
