--- a/.github/workflows/pull-request-stake-pool.yml
+++ b/.github/workflows/pull-request-stake-pool.yml
@@ -6,18 +6,29 @@ on:
     - 'stake-pool/**'
     - 'token/**'
     - 'ci/*-version.sh'
+    - '.github/workflows/pull-request-stake-pool.yml'
   push:
     branches: [master]
     paths:
     - 'stake-pool/**'
     - 'token/**'
     - 'ci/*-version.sh'
+    - '.github/workflows/pull-request-stake-pool.yml'
 
 jobs:
   cargo-test-sbf:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Check disk space
+        run: df -h
+
+      - name: Remove unneeded packages for more space
+        run: bash ./ci/warning/purge-ubuntu-runner.sh
+
+      - name: Check disk space again
+        run: df -h
 
       - name: Set env vars
         run: |
