token-metadata: Add interface describing the program

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ members = [
   "stateless-asks/program",
   "token-lending/cli",
   "token-lending/program",
+  "token-metadata/interface",
   "token-swap/program",
   "token-swap/program/fuzz",
   "token-upgrade/cli",
