--- a/token-metadata/example/Cargo.toml
+++ b/token-metadata/example/Cargo.toml
@@ -21,6 +21,7 @@ spl-token-metadata-interface = { version = "0.1.0", path = "../interface" }
 solana-program-test = "1.14.12"
 solana-sdk = "1.14.12"
 spl-token-client = { version = "0.5", path = "../../token/client" }
+test-case = "3.1"
 
 [lib]
 crate-type = ["cdylib", "lib"]
