--- a/libraries/type-length-value/Cargo.toml
+++ b/libraries/type-length-value/Cargo.toml
@@ -19,6 +19,8 @@ num-derive = "0.3"
 num-traits = "0.2"
 num_enum = "0.6.1"
 solana-program = "1.14.12"
+spl-type-length-value-derive = { version = "0.1.0", path = "./derive" }
+spl-type-length-value-syn = { version = "0.1.0", path = "./syn" }
 thiserror = "1.0"
 
 [lib]
