--- a/libraries/discriminator/derive/Cargo.toml
+++ b/libraries/discriminator/derive/Cargo.toml
@@ -14,4 +14,4 @@ proc-macro = true
 proc-macro2 = "1.0"
 quote = "1.0"
 spl-discriminator-syn = { version = "0.1.0", path = "../syn" }
-syn = { version = "2.0", features = ["extra-traits"] }
+syn = { version = "2.0", features = ["full"] }
