--- a/token/program-2022-test/Cargo.toml
+++ b/token/program-2022-test/Cargo.toml
@@ -29,3 +29,4 @@ spl-instruction-padding = { version = "0.1.0", path="../../instruction-padding/p
 spl-token-client = { version = "0.5", path = "../client" }
 spl-transfer-hook-example = { version = "0.1", path="../transfer-hook-example", features = ["no-entrypoint"] }
 spl-transfer-hook-interface = { version = "0.1", path="../transfer-hook-interface" }
+test-case = "3.1"
