add borsh to discriminator lib

--- a/libraries/discriminator/Cargo.toml
+++ b/libraries/discriminator/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 edition = "2021"
 
 [dependencies]
+borsh = "0.9.3"
 bytemuck = { version = "1.13.1", features = ["derive"] }
 solana-program = "1.14.12"
 spl-discriminator-derive = { version = "0.1.0", path = "./derive" }
