--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -231,9 +231,9 @@ jobs:
 
       - name: Build and test token-2022 twoxtx (TEMPORARY)
         run: |
+          cargo build-sbf --manifest-path token/program-2022/Cargo.toml
+          cargo build-sbf --manifest-path instruction-padding/program/Cargo.toml
           ./token/twoxtx-setup.sh
-          ./token/twoxtx-solana/cargo-build-sbf --manifest-path token/program-2022/Cargo.toml
-          ./token/twoxtx-solana/cargo-build-sbf --manifest-path instruction-padding/program/Cargo.toml
           ./token/twoxtx-solana/cargo-test-sbf --manifest-path token/program-2022-test/Cargo.toml -- --nocapture
 
   js-test:
