--- a/token/program-2022/Cargo.toml
+++ b/token/program-2022/Cargo.toml
@@ -26,8 +26,9 @@ num_enum = "0.6.1"
 solana-program = "1.16.1"
 solana-zk-token-sdk = "1.16.1"
 spl-memo = { version = "4.0.0", path = "../../memo/program", features = [ "no-entrypoint" ] }
-spl-transfer-hook-interface = { version = "0.1.0", path = "../transfer-hook-interface" }
 spl-token = { version = "4.0",  path = "../program", features = ["no-entrypoint"] }
+spl-token-metadata-interface = { version = "0.1.0", path = "../../token-metadata/interface" }
+spl-transfer-hook-interface = { version = "0.1.0", path = "../transfer-hook-interface" }
 thiserror = "1.0"
 serde = { version = "1.0.164", optional = true }
 serde_with = { version = "2.0.0", optional = true }
