--- a/token/program/Cargo.toml
+++ b/token/program/Cargo.toml
@@ -19,6 +19,7 @@ num-derive = "0.4"
 num-traits = "0.2"
 num_enum = "0.6.1"
 solana-program = "1.16.1"
+getrandom = { version = "0.2.8", features = ["custom"] }
 thiserror = "1.0"
 
 [dev-dependencies]
