--- a/token/client/Cargo.toml
+++ b/token/client/Cargo.toml
@@ -20,6 +20,7 @@ spl-associated-token-account = { version = "2.0", path = "../../associated-token
 spl-memo = { version = "4.0.0", path = "../../memo/program", features = ["no-entrypoint"] }
 spl-token = { version = "4.0", path="../program", features = [ "no-entrypoint" ] }
 spl-token-2022 = { version = "0.7", path="../program-2022" }
+spl-token-metadata-interface = { version = "0.1", path="../../token-metadata/interface" }
 spl-transfer-hook-interface = { version = "0.1", path="../transfer-hook-interface" }
 thiserror = "1.0"
 
