--- a/token/program-2022-test/Cargo.toml
+++ b/token/program-2022-test/Cargo.toml
@@ -18,6 +18,7 @@ walkdir = "2"
 
 [dev-dependencies]
 async-trait = "0.1"
+borsh = "0.10"
 futures-util = "0.3"
 solana-program = "=1.16.1"
 solana-program-test = "=1.16.1"
@@ -27,6 +28,7 @@ spl-memo = { version = "4.0.0", path = "../../memo/program", features = ["no-ent
 spl-token-2022 = { version = "0.7", path="../program-2022", features = ["no-entrypoint"] }
 spl-instruction-padding = { version = "0.1.0", path="../../instruction-padding/program", features = ["no-entrypoint"] }
 spl-token-client = { version = "0.5", path = "../client" }
+spl-token-metadata-interface = { version = "0.1", path = "../../token-metadata/interface" }
 spl-transfer-hook-example = { version = "0.1", path="../transfer-hook-example", features = ["no-entrypoint"] }
 spl-transfer-hook-interface = { version = "0.1", path="../transfer-hook-interface" }
 test-case = "3.1"
