--- a/memo/js/package.json
+++ b/memo/js/package.json
@@ -63,7 +63,7 @@
         "chai": "^4.3.6",
         "eslint": "^8.20.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-prettier": "^5.0.0-alpha.1",
         "eslint-plugin-require-extensions": "^0.1.1",
         "gh-pages": "^5.0.0",
         "jest": "^28.1.3",
