--- a/stake-pool/js/package.json
+++ b/stake-pool/js/package.json
@@ -67,7 +67,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0-alpha.1",
     "jest": "^27.5.1",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.0",
